# code-agent-control

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.agents/skills/code-agent-control/: SKILL.md
.agents/skills/code-agent-control/agents/: openai.yaml
.agents/skills/code-agent-control/references/: hooks.md
.agents/skills/code-agent-control/scripts/: code_agent_control.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: architecture.md
tests/: test_claude_output.py  test_model_alias.py  test_skill_shape.py
tools/: install_skill.py
