[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "code-agent-control"
version = "0.1.0"
description = "Codex Skill for controlling Claude Code and Kimi Code"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "yicloud9" }]

[project.optional-dependencies]
dev = [
  "pytest>=7",
  "PyYAML>=6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
